apply plugin: 'com.android.application'

android {
    compileSdkVersion 35
    defaultConfig {
        applicationId "org.ietf.ietfsched"
        minSdkVersion 21
        targetSdkVersion 35
    }
    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
            // signingConfig signingConfigs.release  // Commented out - no signing config defined
        }
    }
    productFlavors {
    }
    // Most likely this will fail soon:
    //   replace the deprecated apache HttpClient with the new HttpURLConnection.
    useLibrary 'org.apache.http.legacy'
    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }
    lint {
        checkReleaseBuilds false
    }
    namespace 'org.ietf.ietfsched'
}

dependencies {
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation "org.commonmark:commonmark:0.21.0"
}
